# txtcompose

./: CMakeLists.txt  Makefile  README.md  composer.cpp  composer.hpp  options.cpp  options.hpp  txtcompose.cpp
examples/poem/: a.txt  d.txt  ending.txt
examples/poem/subdir/: b.txt  c.txt
